@@ -9,21 +9,12 @@ from pyscf import gto
 Specify symmetry.
 
 Mole.symmetry can be True/False to turn on/off the symmetry (default is off),
-or a string to specify the symmetry of molecule.
+or a string to specify the symmetry of molecule.  symmetry_subgroup keyword
+can be set to generate a subgroup of the dectected symmetry.
+symmetry_subgroup has no effect when an explicit label is assigned to
+Mole.symmetry.
 
-If symmetry is bool type, the atom coordinates might be changed.  The molecule
-will be rotated to a propper orientation in which the highest rotation axis
-is parallel to Z-axis.  Also, symmetry_subgroup keyword can be used to
-generate a subgroup of the dectected symmetry.  symmetry_subgroup keyword has
-no effect when symmetry symbol is explicitly given.
-
-NOTE: to assign Mole.symmetry with a given symbol,  the molecule must be put
-in a proper orientation.  The program will check the given symmetry to ensure
-that the molecule has the required symmetry.  If the detected symmetry does
-not match to the assigend symmetry, you will see a warning message on the
-screen.
-
-Symmetry adapted basis are stored in Mole object.
+Symmetry adapted basis are stored in Mole attribute symm_orb.
 '''
 
 mol = gto.M(
